kubernetes/apps/default/ntfy/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ntfy
  annotations:
    gatus.home-operations.com/endpoint: |
      path: /v1/health
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "ntfy.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: ntfy
          port: 80
